--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <start-class>com.springcloud.task_db.TaskDbApplication</start-class>
+        <start-class>com.springcloud.task_db2.TaskDb2Application</start-class>
     </properties>
 
     <dependencies>
