--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8092
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3307/cloud?serverTimezone=UTC&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://db:3306/cloud?serverTimezone=UTC&useSSL=false&useUnicode=yes&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
